--- a/index.html
+++ b/index.html
@@ -440,29 +440,53 @@
                   <p>1.<span class="ndash">&ndash;</span>3. 3.
                     <br>
                     <b>Startupweekend Prague</b></p>
-                  <a href="https://www.eventbrite.com/e/startup-weekend-prague-tickets-51748711790?fbclid=IwAR0ayLplLWHWLJgPhKbfUhQbn-QNJjkSaLmNSooe5wAYx7GohuuduMTVpYo" class="button small ">Koupit lístek</a>
+                  <a href="https://www.eventbrite.com/e/startup-weekend-prague-tickets-51748711790?fbclid=IwAR0ayLplLWHWLJgPhKbfUhQbn-QNJjkSaLmNSooe5wAYx7GohuuduMTVpYo" class="button small ">Více info</a>
+                </div>
+                <div class="event">
+                  <p>27. 3.
+                    <br>
+                    <b>SG Prague: Complexity with Tomas Havryluk</b></p>
+                  <a href="https://www.facebook.com/events/930732303984626/" class="button small ">Více info</a>
                 </div>
               </div>
             </div>
             <div class="cell empty">
               <div class="inner" data-equalizer-watch>
                 <h4>duben</h4>
+                <div class="event">
+                  <p>16. 4.
+                    <br>
+                    <b>SG Prague: Tony Stark, Hollywood</b></p>
+                  <a href="https://www.facebook.com/events/277182593219854/" class="button small ">Více info</a>
+                </div>
+                <div class="event">
+                  <p>25. 4.
+                    <br>
+                    <b>SG Prague: Changing personal finance</b></p>
+                  <a href="https://www.facebook.com/events/2608393949188669/" class="button small ">Více info</a>
+                </div>
               </div>
             </div>
-            <div class="cell active">
+            <div class="cell empty">
               <div class="inner" data-equalizer-watch>
                 <h4>květen</h4>
                 <div class="event">
-                  <p>17.<span class="ndash">&ndash;</span>19. 5.
+                  <p>16. 5.
                     <br>
-                    <b>Startupweekend Olomouc</b></p>
-                  <a href="http://bit.ly/swolomouc" class="button small ">Více info</a>
+                    <b>SG Prague: Female leaders</b></p>
+                  <a href="https://www.facebook.com/events/2331037766926828/" class="button small ">Více info</a>
                 </div>
               </div>
             </div>
             <div class="cell empty">
               <div class="inner" data-equalizer-watch>
                 <h4>červen</h4>
+                <div class="event">
+                  <p>22. 6.
+                    <br>
+                    <b>SG Prague: Sport and Education</b></p>
+                  <a href="https://www.facebook.com/events/385893402016078/" class="button small ">Více info</a>
+                </div>
               </div>
             </div>
             <div class="cell empty">
@@ -473,21 +497,75 @@
             <div class="cell empty">
               <div class="inner" data-equalizer-watch>
                 <h4>srpen</h4>
+                <div class="event">
+                  <p>29. 8.
+                    <br>
+                    <b>SG Prague: Circular Economy</b></p>
+                  <a href="https://www.facebook.com/events/359700471383338/" class="button small ">Více info</a>
+                </div>
               </div>
             </div>
             <div class="cell empty">
               <div class="inner" data-equalizer-watch>
                 <h4>září</h4>
+                <div class="event">
+                  <p>13.<span class="ndash">&ndash;</span>15. 9.
+                    <br>
+                    <b>Startupweekend Olomouc</b></p>
+                  <a href="https://www.facebook.com/suwolomouc/" class="button small ">Více info</a>
+                </div>
+                <div class="event">
+                  <p>24. 9.
+                    <br>
+                    <b>SG Prague: Hunting unicorns from CE</b></p>
+                  <a href="https://www.facebook.com/events/483458809110201/" class="button small ">Více info</a>
+                </div>
               </div>
             </div>
-            <div class="cell empty">
+            <div class="cell active">
               <div class="inner" data-equalizer-watch>
                 <h4>říjen</h4>
+                <div class="event">
+                  <p>4. 10.
+                    <br>
+                    <b>Soutěž a podnikej: Deadline přihlášek</b></p>
+                  <a href="https://www.facebook.com/events/902021650198033/" class="button small ">Přihlásit se</a>
+                </div>
+                <div class="event">
+                  <p>4.<span class="ndash">&ndash;</span>6. 10.
+                    <br>
+                    <b>Startupweekend Prague - Communication</b></p>
+                  <a href="https://www.facebook.com/events/2431513910403707/" class="button small ">Více info</a>
+                </div>
+                <div class="event">
+                  <p>24. 10.
+                    <br>
+                    <b>SG Prague: Female leaders</b></p>
+                  <a href="https://www.facebook.com/events/2054871181281815/" class="button small ">Více info</a>
+                </div>
               </div>
             </div>
-            <div class="cell empty">
+            <div class="cell active">
               <div class="inner" data-equalizer-watch>
                 <h4>listopad</h4>
+                <div class="event">
+                  <p>12. 11.
+                    <br>
+                    <b>SG Prague: Startups vs Corporations</b></p>
+                  <a href="https://www.facebook.com/events/534173197385450/" class="button small ">Přihlásit se</a>
+                </div>
+                <div class="event">
+                  <p>16.<span class="ndash">&ndash;</span>18. 11.
+                    <br>
+                    <b>Startupweekend Ostrava</b></p>
+                  <a href="https://www.facebook.com/swostrava/" class="button small ">Koupit lístek</a>
+                </div>
+                <div class="event">
+                  <p>22.<span class="ndash">&ndash;</span>24. 11.
+                    <br>
+                    <b>Startupweekend Zlín</b></p>
+                  <a href="https://www.facebook.com/events/2558366961060282/" class="button small ">Koupit lístek</a>
+                </div>
               </div>
             </div>
             <div class="cell empty">
