updated members section

--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
             <div class="small-4 medium-3 large-2 cell text-center medallion">
               <img src="img/photo/martin-andrle.jpg" class="profile-pict">
               <p>Martin Andrle</p>
-              <p class="small">Startup Weekend Prague</p>
+              <p class="small">Startovani</p>
               <p class=""><a href="https://www.linkedin.com/in/maandrle/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
             </div>
             <div class="small-4 medium-3 large-2 cell text-center medallion">
@@ -663,40 +663,16 @@
               <p class=""><a href="https://www.linkedin.com/in/vitekmartin/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
             </div>
             <div class="small-4 medium-3 large-2 cell text-center medallion">
-              <img src="img/photo/zuzana-maderova.jpg" class="profile-pict">
-              <p>Zuzana Maderová</p>
-              <p class="small">Startup Weekend Prague</p>
-              <p class=""><a href="https://www.linkedin.com/in/zuzanamaderova/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
-            </div>
-            <div class="small-4 medium-3 large-2 cell text-center medallion">
-              <img src="img/photo/patrik-juranek.jpeg" class="profile-pict">
-              <p>Patrik Juránek</p>
-              <p class="small">Startup Grind Prague</p>
-              <p class=""><a href="https://www.linkedin.com/in/patrikjuranek/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
-            </div>
-            <div class="small-4 medium-3 large-2 cell text-center medallion">
-              <img src="img/photo/david-friedl.jpeg" class="profile-pict">
-              <p>David Friedl</p>
-              <p class="small">Soutěž a podnikej</p>
-              <p class=""><a href="https://www.linkedin.com/in/david-friedl-8b2b53b0/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
-            </div>
-            <div class="small-4 medium-3 large-2 cell text-center medallion">
-              <img src="img/photo/Maxim-kozlov.png" class="profile-pict">
-              <p>Maxim Kozlov</p>
-              <p class="small">Startovani</p>
-              <p class=""><a href="https://www.linkedin.com/in/themaxkozlov/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
+              <img src="img/photo/jitka-alexova.jpeg" class="profile-pict">
+              <p>Jitka Alexová</p>
+              <p class="small">Startup Weekend Zlín</p>
+              <p class=""><a href="https://www.linkedin.com/in/jitka-alexov%C3%A1-a811aa32/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
             </div>
             <div class="small-4 medium-3 large-2 cell text-center medallion">
               <img src="img/photo/ondrej-cejka.jpeg" class="profile-pict">
               <p>Ondřej Čejka</p>
               <p class="small">Startup Weekend Olomouc</p>
               <p class=""><a href="https://www.linkedin.com/in/ondcej/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
-            </div>
-            <div class="small-4 medium-3 large-2 cell text-center medallion">
-              <img src="img/photo/pavol-hejny.jpeg" class="profile-pict">
-              <p>Pavol Hejný</p>
-              <p class="small">Startovani</p>
-              <p class=""><a href="https://www.linkedin.com/in/hejny/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
             </div>
             <div class="small-4 medium-3 large-2 cell text-center medallion">
               <img src="img/photo/pavel-koenig.jpeg" class="profile-pict">
@@ -706,26 +682,44 @@
             </div>
             <div class="small-4 medium-3 large-2 cell text-center medallion">
               <img src="img/photo/filip-goszler.jpeg" class="profile-pict">
-              <p>Fililp Goszler</p>
+              <p>Filip Goszler</p>
               <p class="small">Startup Weekend Ostrava</p>
               <p class=""><a href="https://www.linkedin.com/in/filipgoszler/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
             </div>
             <div class="small-4 medium-3 large-2 cell text-center medallion">
-              <img src="img/photo/katerina-markova.jpeg" class="profile-pict">
-              <p>Kateřina Marková</p>
+              <img src="img/photo/jan-juriga.jpeg" class="profile-pict">
+              <p>Jan Juriga</p>
               <p class="small">Startup Weekend Prague</p>
-              <p class=""><a href="https://www.linkedin.com/in/kmarkova/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
+              <p class=""><a href="https://www.linkedin.com/in/janjuriga/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
             </div>
             <div class="small-4 medium-3 large-2 cell text-center medallion">
-              <img src="img/photo/petr-holik.jpeg" class="profile-pict">
-              <p>Petr Holík</p>
+              <img src="img/photo/kristina-macekovic.jpeg" class="profile-pict">
+              <p>Kristina Macekovic</p>
               <p class="small">Startup Weekend Prague</p>
-              <p class=""><a href="https://www.linkedin.com/in/petr-hol%C3%ADk-087089b7/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
+              <p class=""><a href="https://www.linkedin.com/in/kristina-maceković-693a24155/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
+            </div>
+            <div class="small-4 medium-3 large-2 cell text-center medallion">
+              <img src="img/photo/zuzana-maderova.jpg" class="profile-pict">
+              <p>Zuzana Maderová</p>
+              <p class="small">Startovani</p>
+              <p class=""><a href="https://www.linkedin.com/in/zuzanamaderova/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
+            </div>
+            <div class="small-4 medium-3 large-2 cell text-center medallion">
+              <img src="img/photo/patrik-juranek.jpeg" class="profile-pict">
+              <p>Patrik Juránek</p>
+              <p class="small">Startup Grind Prague</p>
+              <p class=""><a href="https://www.linkedin.com/in/patrikjuranek/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
+            </div>
+            <div class="small-4 medium-3 large-2 cell text-center medallion">
+              <img src="img/photo/Maxim-kozlov.png" class="profile-pict">
+              <p>Maxim Kozlov</p>
+              <p class="small">Startovani</p>
+              <p class=""><a href="https://www.linkedin.com/in/themaxkozlov/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
             </div>
             <div class="small-12 cell text-center helping-us">
               <h4 class="subtle">Na cestě nám pomáhájí</h4>
               <!-- don't even think to delete it :D :P -->
-              <p>Jan Antonín Kolář, Vladimír Mokrý, Hana Martínková, Jiří Fusek a spousta dalších skvělých lidí</p>
+              <p>Jan Antonín Kolář, Vladimír Mokrý, Hana Martínková, Jiří Fusek, Kateřina Marková, Petr Holík, Pavol Hejný a spousta dalších skvělých lidí</p>
             </div>
           </div>
         </div>
