--- a/index.html
+++ b/index.html
@@ -555,16 +555,16 @@
                   <a href="https://www.facebook.com/events/534173197385450/" class="button small ">Přihlásit se</a>
                 </div>
                 <div class="event">
-                  <p>16.<span class="ndash">&ndash;</span>18. 11.
-                    <br>
-                    <b>Startupweekend Ostrava</b></p>
-                  <a href="https://www.facebook.com/swostrava/" class="button small ">Koupit lístek</a>
-                </div>
-                <div class="event">
                   <p>22.<span class="ndash">&ndash;</span>24. 11.
                     <br>
                     <b>Startupweekend Zlín</b></p>
                   <a href="https://www.facebook.com/events/2558366961060282/" class="button small ">Koupit lístek</a>
+                </div>
+                <div class="event">
+                  <p>29. 11.<span class="ndash">&ndash;</span>1. 12.
+                    <br>
+                    <b>Startupweekend Ostrava</b></p>
+                  <a href="https://www.facebook.com/swostrava/" class="button small ">Koupit lístek</a>
                 </div>
               </div>
             </div>
