updated section with sponsors

--- a/index.html
+++ b/index.html
@@ -117,19 +117,13 @@
           <img src="img/logo/pwc.svg">
         </div>
         <div class="cell " style="width: 9em">
-          <img src="img/logo/lmc.svg">
-        </div>
-        <div class="cell " style="width: 6em">
-          <img src="img/logo/unilever.svg">
+          <img src="img/logo/czech_invest.svg">
         </div>
         <!--<div class="cell " style="width: 6em">
 					<img src="img/logo/snemovni7.png">
 				</div>-->
         <div class="cell " style="width: 9em">
           <img src="img/logo/google.svg">
-        </div>
-        <div class="cell " style="width: 11em">
-          <img src="img/logo/asseco.svg">
         </div>
         <!--<div class="cell " style="width: 11em">
 					<img src="img/logo/represent.svg">
