--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
                 </div>
               </div>
             </div>
-            <div class="cell active">
+            <div class="cell empty">
               <div class="inner" data-equalizer-watch>
                 <h4>říjen</h4>
                 <div class="event">
@@ -741,7 +741,7 @@
       <div class="grid-container ">
         <div class="grid-x grid-padding-x ">
           <div class="small-12 medium-8 large-8 cell">
-            <p class="small">Organizuje Techsquat z.s., IČO: 06061745, Na poříčí 1045/22, 110 00 Praha
+            <p class="small">Organizuje Startování z.s., IČO: 06061745, Na poříčí 1045/22, 110 00 Praha
               <br>Finančně nás můžete podpořit na: 81098109/2010 </p>
           </div>
           <div class="small-12 medium-4 large-4 cell">
