updated events and footer

--- a/index.html
+++ b/index.html
@@ -549,12 +549,6 @@
                   <a href="https://www.facebook.com/events/534173197385450/" class="button small ">Přihlásit se</a>
                 </div>
                 <div class="event">
-                  <p>22.<span class="ndash">&ndash;</span>24. 11.
-                    <br>
-                    <b>Startupweekend Zlín</b></p>
-                  <a href="https://www.facebook.com/events/2558366961060282/" class="button small ">Koupit lístek</a>
-                </div>
-                <div class="event">
                   <p>29. 11.<span class="ndash">&ndash;</span>1. 12.
                     <br>
                     <b>Startupweekend Ostrava</b></p>
@@ -741,7 +735,7 @@
       <div class="grid-container ">
         <div class="grid-x grid-padding-x ">
           <div class="small-12 medium-8 large-8 cell">
-            <p class="small">Organizuje Startování z.s., IČO: 06061745, Na poříčí 1045/22, 110 00 Praha
+            <p class="small">Organizuje Startování z.s., IČO: 06061745, Diezenhoferovy sady 1102/1, 150 00 Praha
               <br>Finančně nás můžete podpořit na: 81098109/2010 </p>
           </div>
           <div class="small-12 medium-4 large-4 cell">
