verification of domain

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <link rel="shortcut icon" href="img/favicon.ico" />
+  <meta name="google-site-verification" content="JKHcGZZw8_-oxe9PIBEdW0QpoD8F7Y8BJeZRWyr510k" />
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
