updated section events

--- a/index.html
+++ b/index.html
@@ -400,20 +400,14 @@
           <h2 class="gradient">Kalendář akcí</h2>
           <h4 class="subtle">2019</h4>
           <div class="grid-x grid-margin-x small-up-1 medium-up-3 large-up-4 calendar" data-equalizer>
-            <div class="cell empty">
+            <div class="cell active">
               <div class="inner" data-equalizer-watch>
                 <h4>leden</h4>
                 <div class="event">
-                  <p>25. 1.
+                  <p>24. 1.
                     <br>
                     <b>Soutěž a podnikej: Republikové finále</b></p>
                   <a href="https://www.facebook.com/SoutezAPodnikej/photos/a.1167485919959781/2513356042039422/?type=3&theater" class="button small ">Více info</a>
-                </div>
-                <div class="event">
-                  <p>29. 1.
-                    <br>
-                    <b>SG Prague: Time is limited!</b></p>
-                  <a href="https://www.startupgrind.com/events/details/startup-grind-prague-presents-jan-rezab-time-is-limited/#/" class="button small ">Více info</a>
                 </div>
               </div>
             </div>
@@ -421,10 +415,10 @@
               <div class="inner" data-equalizer-watch>
                 <h4>únor</h4>
                 <div class="event">
-                  <p>15.<span class="ndash">&ndash;</span>17. 2.
+                  <p>21.<span class="ndash">&ndash;</span>23. 2.
                     <br>
                     <b>Startupweekend Plzeň</b></p>
-                  <a href="https://www.facebook.com/events/705196583182611/" class="button small ">Více info</a>
+                  <a href="https://www.facebook.com/events/2365148096924486/" class="button small ">Více info</a>
                 </div>
               </div>
             </div>
@@ -432,56 +426,32 @@
               <div class="inner" data-equalizer-watch>
                 <h4>březen</h4>
                 <div class="event">
-                  <p>1.<span class="ndash">&ndash;</span>3. 3.
+                  <p>6.<span class="ndash">&ndash;</span>8. 3.
                     <br>
                     <b>Startupweekend Prague</b></p>
-                  <a href="https://www.eventbrite.com/e/startup-weekend-prague-tickets-51748711790?fbclid=IwAR0ayLplLWHWLJgPhKbfUhQbn-QNJjkSaLmNSooe5wAYx7GohuuduMTVpYo" class="button small ">Více info</a>
+                  <a href="https://www.facebook.com/events/408035363446249/" class="button small ">Více info</a>
                 </div>
                 <div class="event">
                   <p>27. 3.
                     <br>
-                    <b>SG Prague: Complexity with Tomas Havryluk</b></p>
-                  <a href="https://www.facebook.com/events/930732303984626/" class="button small ">Více info</a>
+                    <b>Startupweekend Zlín</b></p>
+                  <a href="https://www.facebook.com/events/2509717845982567/" class="button small ">Více info</a>
                 </div>
               </div>
             </div>
             <div class="cell empty">
               <div class="inner" data-equalizer-watch>
                 <h4>duben</h4>
-                <div class="event">
-                  <p>16. 4.
-                    <br>
-                    <b>SG Prague: Tony Stark, Hollywood</b></p>
-                  <a href="https://www.facebook.com/events/277182593219854/" class="button small ">Více info</a>
-                </div>
-                <div class="event">
-                  <p>25. 4.
-                    <br>
-                    <b>SG Prague: Changing personal finance</b></p>
-                  <a href="https://www.facebook.com/events/2608393949188669/" class="button small ">Více info</a>
-                </div>
               </div>
             </div>
             <div class="cell empty">
               <div class="inner" data-equalizer-watch>
                 <h4>květen</h4>
-                <div class="event">
-                  <p>16. 5.
-                    <br>
-                    <b>SG Prague: Female leaders</b></p>
-                  <a href="https://www.facebook.com/events/2331037766926828/" class="button small ">Více info</a>
-                </div>
               </div>
             </div>
             <div class="cell empty">
               <div class="inner" data-equalizer-watch>
                 <h4>červen</h4>
-                <div class="event">
-                  <p>22. 6.
-                    <br>
-                    <b>SG Prague: Sport and Education</b></p>
-                  <a href="https://www.facebook.com/events/385893402016078/" class="button small ">Více info</a>
-                </div>
               </div>
             </div>
             <div class="cell empty">
@@ -492,28 +462,16 @@
             <div class="cell empty">
               <div class="inner" data-equalizer-watch>
                 <h4>srpen</h4>
-                <div class="event">
-                  <p>29. 8.
-                    <br>
-                    <b>SG Prague: Circular Economy</b></p>
-                  <a href="https://www.facebook.com/events/359700471383338/" class="button small ">Více info</a>
-                </div>
               </div>
             </div>
             <div class="cell empty">
               <div class="inner" data-equalizer-watch>
                 <h4>září</h4>
                 <div class="event">
-                  <p>13.<span class="ndash">&ndash;</span>15. 9.
+                  <p>11.<span class="ndash">&ndash;</span>13. 9.
                     <br>
                     <b>Startupweekend Olomouc</b></p>
                   <a href="https://www.facebook.com/suwolomouc/" class="button small ">Více info</a>
-                </div>
-                <div class="event">
-                  <p>24. 9.
-                    <br>
-                    <b>SG Prague: Hunting unicorns from CE</b></p>
-                  <a href="https://www.facebook.com/events/483458809110201/" class="button small ">Více info</a>
                 </div>
               </div>
             </div>
@@ -521,36 +479,18 @@
               <div class="inner" data-equalizer-watch>
                 <h4>říjen</h4>
                 <div class="event">
-                  <p>4. 10.
+                  <p>2.<span class="ndash">&ndash;</span>4. 10.
                     <br>
-                    <b>Soutěž a podnikej: Deadline přihlášek</b></p>
-                  <a href="https://www.facebook.com/events/902021650198033/" class="button small ">Přihlásit se</a>
-                </div>
-                <div class="event">
-                  <p>4.<span class="ndash">&ndash;</span>6. 10.
-                    <br>
-                    <b>Startupweekend Prague - Communication</b></p>
-                  <a href="https://www.facebook.com/events/2431513910403707/" class="button small ">Více info</a>
-                </div>
-                <div class="event">
-                  <p>24. 10.
-                    <br>
-                    <b>SG Prague: Female leaders</b></p>
-                  <a href="https://www.facebook.com/events/2054871181281815/" class="button small ">Více info</a>
+                    <b>Startupweekend Prague - vertical</b></p>
+                  <a href="https://www.facebook.com/swprague/" class="button small ">Více info</a>
                 </div>
               </div>
             </div>
-            <div class="cell active">
+            <div class="cell empty">
               <div class="inner" data-equalizer-watch>
                 <h4>listopad</h4>
                 <div class="event">
-                  <p>12. 11.
-                    <br>
-                    <b>SG Prague: Startups vs Corporations</b></p>
-                  <a href="https://www.facebook.com/events/534173197385450/" class="button small ">Přihlásit se</a>
-                </div>
-                <div class="event">
-                  <p>29. 11.<span class="ndash">&ndash;</span>1. 12.
+                  <p>20.<span class="ndash">&ndash;</span>22.11.
                     <br>
                     <b>Startupweekend Ostrava</b></p>
                   <a href="https://www.facebook.com/swostrava/" class="button small ">Koupit lístek</a>
