--- a/index.html
+++ b/index.html
@@ -400,18 +400,24 @@
           <h2 class="gradient">Kalendář akcí</h2>
           <h4 class="subtle">2019</h4>
           <div class="grid-x grid-margin-x small-up-1 medium-up-3 large-up-4 calendar" data-equalizer>
-            <div class="cell active">
+            <div class="cell empty">
               <div class="inner" data-equalizer-watch>
                 <h4>leden</h4>
+                <div class="event">
+                  <p>22.1.
+                    <br>
+                    <b>SG Praha - Prague as AI Superhub</b></p>
+                  <a href="https://www.facebook.com/events/2631193716965187/" class="button small ">Více info</a>
+                </div>
                 <div class="event">
                   <p>24. 1.
                     <br>
                     <b>Soutěž a podnikej: Republikové finále</b></p>
-                  <a href="https://www.facebook.com/SoutezAPodnikej/photos/a.1167485919959781/2513356042039422/?type=3&theater" class="button small ">Více info</a>
+                  <a href="https://www.facebook.com/SoutezAPodnikej/videos/1064355480590631/" class="button small ">Video z akce</a>
                 </div>
               </div>
             </div>
-            <div class="cell empty">
+            <div class="cell active">
               <div class="inner" data-equalizer-watch>
                 <h4>únor</h4>
                 <div class="event">
@@ -419,6 +425,12 @@
                     <br>
                     <b>Startupweekend Plzeň</b></p>
                   <a href="https://www.facebook.com/events/2365148096924486/" class="button small ">Více info</a>
+                </div>
+                <div class="event">
+                  <p>24.2.
+                    <br>
+                    <b>SG Praha - How to build startup?</b></p>
+                  <a href="https://www.facebook.com/events/1358603744321850/" class="button small ">Více info</a>
                 </div>
               </div>
             </div>
@@ -592,6 +604,12 @@
               <p class=""><a href="https://www.linkedin.com/in/vitekmartin/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
             </div>
             <div class="small-4 medium-3 large-2 cell text-center medallion">
+              <img src="img/photo/david_horal.jpeg" class="profile-pict">
+              <p>David Horal</p>
+              <p class="small">Startup Weekend Prague</p>
+              <p class=""><a href="https://www.linkedin.com/in/david-horal-56ba9286/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
+            </div>
+            <div class="small-4 medium-3 large-2 cell text-center medallion">
               <img src="img/photo/jitka-alexova.jpeg" class="profile-pict">
               <p>Jitka Alexová</p>
               <p class="small">Startup Weekend Zlín</p>
@@ -628,10 +646,10 @@
               <p class=""><a href="https://www.linkedin.com/in/kristina-maceković-693a24155/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
             </div>
             <div class="small-4 medium-3 large-2 cell text-center medallion">
-              <img src="img/photo/zuzana-maderova.jpg" class="profile-pict">
-              <p>Zuzana Maderová</p>
-              <p class="small">Startovani</p>
-              <p class=""><a href="https://www.linkedin.com/in/zuzanamaderova/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
+              <img src="img/photo/knarik-avanesyan.jpeg" class="profile-pict">
+              <p>Knarik Avanesyan</p>
+              <p class="small">Startup Weekend Prague</p>
+              <p class=""><a href="https://www.linkedin.com/in/knarikavanesyan/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
             </div>
             <div class="small-4 medium-3 large-2 cell text-center medallion">
               <img src="img/photo/patrik-juranek.jpeg" class="profile-pict">
@@ -648,7 +666,7 @@
             <div class="small-12 cell text-center helping-us">
               <h4 class="subtle">Na cestě nám pomáhájí</h4>
               <!-- don't even think to delete it :D :P -->
-              <p>Jan Antonín Kolář, Vladimír Mokrý, Hana Martínková, Jiří Fusek, Kateřina Marková, Petr Holík, Pavol Hejný a spousta dalších skvělých lidí</p>
+              <p>Zuzana Maderová, Jan Antonín Kolář, Vladimír Mokrý, Hana Martínková, Jiří Fusek, Kateřina Marková, Petr Holík, Pavol Hejný a spousta dalších skvělých lidí</p>
             </div>
           </div>
         </div>
