--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
       <div class="grid-x grid-padding-x small-up-3 medium-up-4 large-up-7 align-spaced align-middle logo-group ">
 
 
-        <div class="cell " style="width: 7em">
+        <!--<div class="cell " style="width: 7em">
           <img src="img/logo/pwc.svg">
-        </div>
+        </div>-->
         <div class="cell " style="width: 9em">
           <img src="img/logo/czech_invest.svg">
         </div>
@@ -398,7 +398,7 @@
       <div class="block" id="kalendar-akci">
         <div class="grid-container ">
           <h2 class="gradient">Kalendář akcí</h2>
-          <h4 class="subtle">2019</h4>
+          <h4 class="subtle">2020</h4>
           <div class="grid-x grid-margin-x small-up-1 medium-up-3 large-up-4 calendar" data-equalizer>
             <div class="cell empty">
               <div class="inner" data-equalizer-watch>
