updated section events

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                 </div>
               </div>
             </div>
-            <div class="cell active">
+            <div class="cell empty">
               <div class="inner" data-equalizer-watch>
                 <h4>únor</h4>
                 <div class="event">
@@ -434,7 +434,7 @@
                 </div>
               </div>
             </div>
-            <div class="cell empty">
+            <div class="cell active">
               <div class="inner" data-equalizer-watch>
                 <h4>březen</h4>
                 <div class="event">
@@ -443,17 +443,17 @@
                     <b>Startupweekend Prague</b></p>
                   <a href="https://www.facebook.com/events/408035363446249/" class="button small ">Více info</a>
                 </div>
-                <div class="event">
-                  <p>27. 3.
-                    <br>
-                    <b>Startupweekend Zlín</b></p>
-                  <a href="https://www.facebook.com/events/2509717845982567/" class="button small ">Více info</a>
-                </div>
               </div>
             </div>
             <div class="cell empty">
               <div class="inner" data-equalizer-watch>
                 <h4>duben</h4>
+                <div class="event">
+                  <p>posunuto.
+                    <br>
+                    <b>Startupweekend Zlín</b></p>
+                  <a href="https://www.facebook.com/events/2509717845982567/" class="button small ">Více info</a>
+                </div>
               </div>
             </div>
             <div class="cell empty">
