updated swprague date

--- a/index.html
+++ b/index.html
@@ -491,9 +491,9 @@
               <div class="inner" data-equalizer-watch>
                 <h4>říjen</h4>
                 <div class="event">
-                  <p>2.<span class="ndash">&ndash;</span>4. 10.
+                  <p>23.<span class="ndash">&ndash;</span>25. 10.
                     <br>
-                    <b>Startupweekend Prague - vertical</b></p>
+                    <b>Startupweekend Prague - "The New Normal"</b></p>
                   <a href="https://www.facebook.com/swprague/" class="button small ">Více info</a>
                 </div>
               </div>
